2012-09-09  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* exception3.c: Rewrite to fix strategy.
	* exception3_0.c: New test.
	* exception2.c: Reduce sleep time to speed up test.
	* Makefile (exception3_0.*): Add new test.
	* GNUmakefile (exception3_0.*): Add new test.
	* Bmakefile (exception3_0.*): Add new test.
	* Wmakefile (exception3_0.*): Add new test.

2012-09-05  Daniel Richard. G <danielg at teragram dot com>

	* exception2.c: Fix result codes to avoid false negative failures.
	* cancel9.c: cosmetic change.
	* GNUmakefile (clean): delete manifest files.
	* Bmakefile: Likewise.
	* Wmakefile: Likewise.
	* Makefile: Likewise.

2012-09-04  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* Makefile (VCEFLAGS): Changed from /EHsc to /EHs which was causing
	tests/once3.c to hang, suspect exceptions not being thrown from
	extern C routines.
	* cancel2.c: Rewrite to use a barrier for thread control; remove
	asyncronous cancel type which was a massive bug in the test strategy
	and cusing SEGFAULTs (access violations).
	* eyal1.c: Remove unused variable 'i' to clear compiler warning.
	* context1.c: Remove call to pthread_exit() in alternate ending to
	quell error in GCE tests see when running x86 build on x64.

2012-09-03  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* Makefile (VCE-static): Add VC++ static build target
	(VCE-static-debug): Likewise.

2012-08-29  Daniel Richard. G <danielg at teragram dot com>

	* mutex6.c: Removed pointless exit(0) and never-reached comment.
	* mutex6r.c: Likewise.
	* mutex6rs.c: Likewise.
	* mutex6s.c: Likewise.
	* mutex6e.c: Likewise.
	* mutex6es.c: Likewise.
	* mutex7.c: Likewise.
	* mutex7e.c: Likewise.
	* mutex7n.c: Likewise.
	* mutex7r.c: Likewise.
	* mutex6n.c: Likewise; ensure operator precedence.
	* once2.c (sharedInt_t): replace static initialization of struct with memset.
	* once3.c: Likewise.
	* once4.c: Likewise.
	* cleanup0.c: Likewise.
	* cleanup1.c: Likewise.