@@ -124,7 +124,7 @@ TESTS	= \
 	  priority1 priority2 inherit1 \
 	  spin1 spin2 spin3 spin4 \
 	  exception1 exception2 exception3_0 exception3 \
-	  cancel9 affinity1 affinity2 stress1
+	  cancel9 affinity1 affinity2 affinity3 affinity4 affinity5 stress1
 
 STRESSTESTS = \
 	stress1
@@ -163,7 +163,7 @@ STATICTESTS = \
 	  priority1 priority2 inherit1 \
 	  spin1 spin2 spin3 spin4 \
 	  exception1 exception2 exception3_0 exception3 \
-	  cancel9 affinity1 affinity2 stress1
+	  cancel9 affinity1 affinity2 affinity3 affinity4 affinity5 stress1
 
 ALLTESTS = $(TESTS) $(BENCHTESTS)
 
@@ -255,6 +255,9 @@ benchtest5.bench:
 
 affinity1.pass:
 affinity2.pass: affinity1.pass
+affinity3.pass: affinity2.pass
+affinity4.pass: affinity3.pass
+affinity5.pass: affinity4.pass
 barrier1.pass: semaphore4.pass
 barrier2.pass: barrier1.pass
 barrier3.pass: barrier2.pass
