@@ -116,7 +116,9 @@ PASSES	= sizes.pass  loadfree.pass &
 	  spin1.pass  spin2.pass  spin3.pass  spin4.pass  &
 	  barrier1.pass  barrier2.pass  barrier3.pass  barrier4.pass  barrier5.pass  &
 	  exception1.pass  exception2.pass  exception3_0.pass  exception3.pass  &
-	  cancel9.pass  affinity1.pass  affinity2.pass  stress1.pass
+	  cancel9.pass  &
+	  affinity1.pass  affinity2.pass  affinity3.pass  affinity4.pass  affinity5.pass  &
+	  stress1.pass
 
 BENCHRESULTS = &
 	  benchtest1.bench benchtest2.bench benchtest3.bench benchtest4.bench benchtest5.bench
@@ -227,6 +229,9 @@ benchtest5.bench:
 
 affinity1.pass:
 affinity2.pass: affinity1.pass
+affinity3.pass: affinity2.pass
+affinity4.pass: affinity3.pass
+affinity5.pass: affinity4.pass
 barrier1.pass: semaphore4.pass
 barrier2.pass: barrier1.pass
 barrier3.pass: barrier2.pass
